# agentic-tutor

./: .env.example  .gitignore  README.md  WORKFLOWS.md  docker-compose.yml  pyproject.toml  test_prompts.txt
artifacts/langgraph_viz/: README.md  summary.json
artifacts/langgraph_viz/combined/: all_workflows.json  all_workflows.mmd
artifacts/langgraph_viz/constructor_coordinator/: constructor_coordinator.json  constructor_coordinator.mmd
artifacts/langgraph_viz/constructor_ingestion/: constructor_ingestion.json  constructor_ingestion.mmd
artifacts/langgraph_viz/constructor_quiz_gen/: constructor_quiz_gen.json  constructor_quiz_gen.mmd
artifacts/langgraph_viz/constructor_structure/: constructor_structure.json  constructor_structure.mmd
artifacts/langgraph_viz/constructor_validation/: constructor_validation.json  constructor_validation.mmd
artifacts/langgraph_viz/tutor_coordinator/: tutor_coordinator.json  tutor_coordinator.mmd
backend/: Dockerfile  README.md  langgraph.json  requirements.txt
backend/app/: __init__.py  main.py
backend/app/agents/: __init__.py
backend/app/api/: __init__.py  auth.py  constructor.py  (+2 more)
backend/tests/: __init__.py  conftest.py  test_auth_api.py  test_constructor_workflow.py  test_requirements.py  test_tutor_workflow.py
frontend/: .env.local  Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: chat-markdown.tsx
scripts/: setup.ps1  setup.sh  visualize_langgraphs.py  visualize_langgraphs_combined.py
(+80 files in other folders)
